# nonebot-plugin-customemote

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
custom_face/: __init__.py
nonebot-plugin-customemote/: __init__.py  data_source.py
nonebot_plugin_customemote/: __init__.py  config.py  data_source.py
